--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Test Blog</title>
+        <title>Travel Planner</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
@@ -9,8 +9,11 @@
     </head>
     <body>
       <div class="page-header">
+        {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <h1><a href="/">Test Blog</a></h1>
+        <a href="{% url 'post_draft_list' %}" class "top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+        {% endif %}
+        <h1><a href="/">Travel Planner</a></h1>
       </div>
       <div class="content container">
         <div class="row">
