--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,10 +11,17 @@
       <div class="page-header">
         {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <a href="{% url 'post_draft_list' %}" class "top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+        <a href="{% url 'logout_url' %}" class="top-menu"><span class="glyphicon glyphicon-stop"></span></a>
+        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+        {% else %}
+        <a href="{% url 'signup' %}" class="top-menu"><span class="glyphicon glyphicon-ok-sign"></span></a>
+        <a href="{% url 'login_url' %}" class="top-menu"><span class="glyphicon glyphicon-play"></span></a>
         {% endif %}
         <h1><a href="/">Travel Planner</a></h1>
       </div>
+      {% if user.is_authenticated %}
+      Logged<br>
+      {% endif %}
       <div class="content container">
         <div class="row">
           <div class="col-md-8">
