--- a/blog/templates/blog/signup_ok.html
+++ b/blog/templates/blog/signup_ok.html
@@ -1,7 +1,9 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-<center>
-  Sign Up Complete! Login?<br>
-  <a href="{% url 'login_url' %}">Log In</a>
-</center>
+<div class="post-list col-md-6">
+  <center>
+    Sign Up Complete! Login?<br>
+    <a href="{% url 'login_url' %}">Log In</a>
+  </center>
+</div>
 {% endblock %}
