--- a/blog/templates/blog/login.html
+++ b/blog/templates/blog/login.html
@@ -1,18 +1,20 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-<div class="container">
-  <form method="POST">
-    {% csrf_token %}
-    <div class="form-group">
-      <label>USERNAME</label>
-      <input type="username" class="form-control" name="username" placeholder="Username">
-    </div>
-    <div class="form-group">
-      <label>PASSWORD</label>
-      <input type="password" class="form-control" name="password" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-default">Login</button>
-  </form>
-  {{ error }}
+<div class="post-list col-md-6">
+  <div class="container">
+    <form method="POST">
+      {% csrf_token %}
+      <div class="form-group">
+        <label>USERNAME</label>
+        <input type="username" class="form-control" name="username" placeholder="Username">
+      </div>
+      <div class="form-group">
+        <label>PASSWORD</label>
+        <input type="password" class="form-control" name="password" placeholder="Password">
+      </div>
+      <button type="submit" class="btn btn-default">Login</button>
+    </form>
+    {{ error }}
+  </div>
 </div>
 {% endblock %}
