--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+  <div class="post-list col-md-6">
     {% for post in posts %}
         <div class="post">
             <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
@@ -8,4 +9,5 @@
             <p>{{ post.text|truncatechars:200 }}</p>
         </div>
     {% endfor %}
+  </div>
 {% endblock %}
