--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,16 +11,18 @@
     </head>
     <body>
       {% block content %}
-        {% for post in posts %}
-          <div class="post">
-            <div class="date">
-              <p> published: {{ post.published_date }}</p>
+        <div class="post-list col-md-6">
+          {% for post in posts %}
+            <div class="post">
+              <div class="date">
+                <p> published: {{ post.published_date }}</p>
+              </div>
+              <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+              <p>{{ post.text|linebreaksbr}}</p>
+              <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
             </div>
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr}}</p>
-            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
+            {% endfor %}
           </div>
-          {% endfor %}
         {% endblock content %}
     </body>
 </html>
